--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/sky_blue_light"
     android:scrollbars="none"
-    tools:context=".fragments.HelpFragment">
+    tools:context=".ui.HelpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
