--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -255,7 +255,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@id/all_features_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/card_crop_analysis">
+            app:layout_constraintEnd_toStartOf="@id/card_land_analysis">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -328,9 +328,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/card_road_survey">
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp" android:gravity="center">
-                <ImageView android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_flood" app:tint="@color/colorPrimary"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Flood Detection" android:textStyle="bold" android:layout_marginTop="8dp" android:textColor="@color/text_color_primary" android:textAlignment="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_flood"
+                    app:tint="@color/colorPrimary"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/flood_detection"
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/text_color_primary"
+                    android:textAlignment="center"/>
+
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -343,7 +362,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@id/card_crop_analysis"
+            app:layout_constraintTop_toBottomOf="@id/card_object_detection"
             app:layout_constraintStart_toEndOf="@id/card_flood_detection"
             app:layout_constraintEnd_toEndOf="parent">
 
