--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -156,11 +156,27 @@
                     android:textSize="@dimen/_14sdp"
                     android:paddingLeft="@dimen/_10sdp"
                     android:drawablePadding="@dimen/_10sdp"
-                    android:drawableLeft="@drawable/ic_profile"
+                    android:drawableLeft="@drawable/ic_lock"
                     android:drawableRight="@drawable/ic_arrow_forward"
                     android:paddingRight="@dimen/_10sdp"
-                    android:id="@+id/change_password_row"
-                    app:icon="@drawable/ic_lock"/>
+                    android:id="@+id/change_password_row"/>
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:minHeight="@dimen/_48sdp"
+                    android:text="Help"
+                    android:gravity="center_vertical"
+                    android:visibility="gone"
+                    android:textSize="@dimen/_14sdp"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:drawablePadding="@dimen/_10sdp"
+                    android:drawableLeft="@drawable/help"
+                    android:drawableRight="@drawable/ic_arrow_forward"
+                    android:paddingRight="@dimen/_10sdp"
+                    android:id="@+id/help_row"/>
+
+
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
