--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/sky_blue_light"
     android:fillViewport="true"
-    tools:context=".ui.ObjectDetectionActivity">
+    tools:context=".ui.ObjectActivity">
 
 
     <LinearLayout
